--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ db.sqlite3-journal
 media
 mewsic/__init__.py
 secret_settings.py
+myvenv
 
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
